--- a/Notes/MainWindow.xaml
+++ b/Notes/MainWindow.xaml
@@ -45,6 +45,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <Button
                             Grid.Column="0"
@@ -65,11 +66,22 @@
                             Margin="0,2,8,0"
                             Padding="0"
                             HorizontalAlignment="Right"
+                            Click="RecordButton_Click"
+                            ToolTipService.ToolTip="Record Voice Note">
+                            <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="14" Glyph="&#xE1D6;"/>
+                        </Button>
+                        <Button
+                            Grid.Column="2"
+                            Width="36"
+                            Height="36"
+                            Margin="0,2,8,0"
+                            Padding="0"
+                            HorizontalAlignment="Right"
                             Click="AskMyNotesClicked">
                             <FontIcon FontFamily="Segoe UI Emoji" FontSize="14" Glyph="🤖"/>
                         </Button>
                         <Button
-                            Grid.Column="2"
+                            Grid.Column="3"
                             Width="36"
                             Height="36"
                             Margin="0,2,0,0"
